# pyinterval

./: .gitignore  pyproject.toml
interval/: __init__.py
